IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Questionnaire__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>