IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Questionnaire__c/fields/recommend__c.field-meta.xml
<CustomField>
    <fullName>recommend__c</fullName>
    <label>Would you recommend the webinar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>