IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Questionnaire__c/fields/Webinar__c.field-meta.xml
<CustomField>
    <fullName>Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Webinar</label>
    <referenceTo>Webinar__c</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>