IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Questionnaire__c/fields/Why__c.field-meta.xml
<CustomField>
    <fullName>Why__c</fullName>
    <description>Tell us why!</description>
    <label>Tell us why?</label>
    <type>TextArea</type>
</CustomField>